# lib/manager.js
@@ -7,6 +7,7 @@ const fs = require('fs');
 const path = require('path');
 const os = require('os');
 const dns = require('dns');
+configure_dns();
 const url = require('url');
 const crypto = require('crypto');
 const express = require('express');
@@ -86,6 +87,17 @@ const credential_fields = qw`customer zone password token`;
 const default_fields = [].concat(credential_fields, mgr_fields);
 const proxy_params = _(swagger.definitions.proxy.properties)
     .pickBy(k=>!credential_fields.includes(k)).keys().value();
+
+function configure_dns(){
+    const google_dns = ['8.8.8.8', '8.8.4.4'];
+    const original_dns = dns.getServers();
+    let servers = google_dns.concat(original_dns.filter(
+        d=>!google_dns.includes(d)));
+    // dns.setServers cashes node if there is an in-flight dns resolution
+    // should be done before any requests are made
+    // https://github.com/nodejs/node/issues/14734
+    dns.setServers(servers);
+}
 
 // XXX ovidiu: move to common node/browser lib
 let get_zone_plan = plans=>{
@@ -278,8 +290,11 @@ function Manager(args, run_config){
             code = rm.status_code;
             protocol = rm.protocol;
             domain = rm.hostname;
-            this.request_stats[protocol].stats.shift();
-            this.request_stats[protocol][code].stats.shift();
+            if (this.request_stats[protocol])
+            {
+                this.request_stats[protocol].stats.shift();
+                this.request_stats[protocol][code].stats.shift();
+            }
         }
     };
     this.stats_aggregator = data=>{
@@ -314,6 +329,8 @@ function Manager(args, run_config){
                 setImmediate(()=>this.regenerate_stats(stat));
             }
             setImmediate(()=>this.handle_usage(data));
+            data.protocol = stat.protocol;
+            data.hostname = stat.hostname;
             let proxy;
             const full_logs = this.argv.history ||
             (proxy = this.proxies_running[data.port]) && proxy.opt.history;
@@ -345,29 +362,17 @@ function Manager(args, run_config){
     this.history_aggregator = (data, opt={})=>{
         try {
             data.response_body = data.response_body.toString();
-            if (this.db.history)
-            {
-                this.db.history.models.request.create(data)
-                .catch(err=>this._log.error('sql query error %s',
-                    zerr.e2s(err)));
-            }
-            else
-            {
-                const _this = this;
-                etask(function*(){
-                    const curr_count = yield _this.sql(`SELECT COUNT(*) AS
-                        count FROM request WHERE port = ${data.port}`);
-                    if (!opt.full_logs &&
-                        curr_count[0].count>=E.default.max_logs)
-                    {
-                        return;
-                    }
-                    let row = {};
-                    for (let f in data)
-                        row['$'+f] = data[f];
-                    _this.db.main.stmt.history.run(row);
-                });
-            }
+            const _this = this;
+            etask(function*(){
+                const curr_count = yield _this.sql(`SELECT COUNT(*) AS count
+                    FROM request WHERE port = ${data.port}`);
+                if (!opt.full_logs && curr_count[0].count>=E.default.max_logs)
+                    return;
+                let row = {};
+                for (let f in data)
+                    row['$'+f] = data[f];
+                _this.db.main.stmt.history.run(row);
+            });
         } catch(e){
             // XXX maximk: buffer failed aggregations
             this._log.error('history aggregator %s', zerr.e2s(e));
@@ -584,9 +589,9 @@ E.prototype.har = function(entries){
             const receive = elapsed-(tl.response-tl.create);
             entry.request_body = entry.request_body||'';
             return {
-                uuid: entry.uuid,
+                uuid: entry.uuid||entry.timestamp,
                 details: {
-                    bw: entry.bw,
+                    bw: entry.bw||entry.in_bw+entry.out_bw,
                     proxy_peer: entry.proxy_peer,
                     protocol: entry.protocol,
                     port: entry.port,
@@ -1895,6 +1900,38 @@ E.prototype.get_cities = etask._fn(function*mgr_get_cities(_this, req, res){
     res.json(_cities);
 });
 
+E.prototype.logs_suggestions = etask._fn(
+function*logs_suggestions(_this, req, res){
+    const ports = yield _this.sql(`SELECT DISTINCT port as val FROM request`);
+    const domains = yield _this.sql(`SELECT DISTINCT hostname as val FROM
+        request`);
+    const protocols = yield _this.sql(`SELECT DISTINCT protocol as val FROM
+        request`);
+    const codes = yield _this.sql(`SELECT DISTINCT status_code as val FROM
+        request`);
+    const suggestions = {
+        ports: ports.map(v=>v.val),
+        domains: domains.map(v=>v.val),
+        codes: codes.map(v=>v.val),
+        protocols: protocols.map(v=>v.val),
+    };
+    res.json(suggestions);
+});
+
+E.prototype.logs_get = etask._fn(function*mgr_history_get(_this, req, res){
+    let result = yield _this.filtered_get(req);
+    res.json(Object.assign({}, _this.har(result.items), {total: result.total,
+        skip: result.skip}));
+});
+
+E.prototype.logs_har_get = etask._fn(
+function*mgr_history_har_get(_this, req, res){
+    res.setHeader('content-disposition', 'attachment; filename=data.har');
+    res.setHeader('content-type', 'application/json');
+    let result = yield _this.filtered_get(req);
+    res.json(_this.har(result.items));
+});
+
 E.prototype.history_har_get = etask._fn(
 function*mgr_history_har_get(_this, req, res){
     res.setHeader('content-disposition', 'attachment; filename=data.har');
@@ -1917,72 +1954,22 @@ E.prototype.filtered_get = etask._fn(function*mgr_filtered_get(_this, req){
     const skip = +req.query.skip||0;
     const limit = +req.query.limit||0;
     let items, total;
-    if (_this.db.history)
-    {
-        const where = {port: req.params.port};
-        if (req.query.url)
-            where.url = {$like: `%${req.query.url}%`};
-        if (req.query.method)
-            where.method = req.query.method;
-        if (req.query.status_code)
-            where.status_code = req.query.status_code;
-        if (req.query.timestamp_min)
-            where.timestamp = {$gte: req.query.timestamp};
-        if (req.query.timestamp_max)
-            where.timestamp = {$lte: req.query.timestamp};
-        if (req.query.elapsed_min)
-            where.elapsed = {$gte: req.query.elapsed};
-        if (req.query.elapsed_max)
-            where.elapsed = {$lte: req.query.elapsed};
-        if (req.query.country)
-            where.country = req.query.country;
-        if (req.query.super_proxy)
-            where.super_proxy = {$like: `%${req.query.super_proxy}%`};
-        if (req.query.proxy_peer)
-            where.proxy_peer = {$like: `%${req.query.proxy_peer}%`};
-        if (req.query.context)
-            where.context = {$like: `%${req.query.context}%`};
-        const res = yield _this.db.history.models.request.findAndCountAll(
-            {where, limit, offset: skip, raw: true});
-        total = res.count;
-        items = res.rows;
-    }
-    else
-    {
-        const wheres = [`port = '${for_db(req.params.port)}'`];
-        if (req.query.url)
-            wheres.push(`url LIKE '%${for_db(req.query.url)}%'`);
-        if (req.query.method)
-            wheres.push(`method = '${for_db(req.query.method)}'`);
-        if (req.query.status_code)
-            wheres.push(`status_code = '${for_db(req.query.status_code)}'`);
-        if (req.query.timestamp_min)
-            wheres.push(`timestamp >= '${for_db(req.query.timestamp_min)}'`);
-        if (req.query.timestamp_max)
-            wheres.push(`timestamp <= '${for_db(req.query.timestamp_max)}'`);
-        if (req.query.elapsed_min)
-            wheres.push(`elapsed >= '${for_db(req.query.elapsed_min)}'`);
-        if (req.query.elapsed_max)
-            wheres.push(`elapsed <= '${for_db(req.query.elapsed_max)}'`);
-        if (req.query.country)
-            wheres.push(`country = '${for_db(req.query.country)}'`);
-        if (req.query.super_proxy)
-        {
-            wheres.push(
-                `super_proxy LIKE '%${for_db(req.query.super_proxy)}%'`);
-        }
-        if (req.query.proxy_peer)
-            wheres.push(`proxy_peer LIKE '%${for_db(req.query.proxy_peer)}%'`);
-        if (req.query.context)
-            wheres.push(`context LIKE '%${for_db(req.query.context)}%'`);
-        items = yield _this.sql(
-            `SELECT * FROM request WHERE (${wheres.join(') AND (')})
-            ORDER BY ${req.query.sort}${req.query.sort_desc ? ' DESC' : ''}`
-            + (limit ? ` LIMIT ${limit} OFFSET ${skip}` : ''));
-        let where = wheres.join(') AND (');
-        total = (yield _this.sql(
-            `SELECT COUNT(*) FROM request WHERE (${where})`))[0]['COUNT(*)'];
-    }
+    req.query.status_code = req.query.code;
+    req.query.hostname = req.query.domain;
+    const wheres = ['port', 'hostname', 'protocol', 'status_code'].map(param=>{
+        if (!req.query[param])
+            return null;
+        return req.query[param].split(',').map(v=>`${param} = '${for_db(v)}'`)
+            .join(' OR ');
+    }).filter(Boolean).join(') AND (');
+    const where = wheres ? 'WHERE ('+wheres+')' : '';
+    const order_by = req.query.sort ? `ORDER BY ${req.query.sort}
+        ${req.query.sort_desc ? 'DESC' : ''}` : '';
+    items = yield _this.sql(
+        `SELECT in_bw+out_bw as bw, * FROM request ${where} ${order_by}`
+        + (limit ? ` LIMIT ${limit} OFFSET ${skip}` : ''));
+    total = (yield _this.sql(`SELECT COUNT(*) FROM request ${where}`))[0]
+    ['COUNT(*)'];
     if (_this.mode!='root')
     {
         for (let row of items)
@@ -2499,6 +2486,9 @@ E.prototype.create_api_interface = function(){
     app.get('/req_status/:port', this._api(this.get_req_status_cnt_api));
     app.get('/proxy_status/:port', this._api(this.proxy_status_get));
     app.get('/history/:port', this._api(this.history_get));
+    app.get('/logs', this._api(this.logs_get));
+    app.get('/logs_har', this._api(this.logs_har_get));
+    app.get('/logs_suggestions', this._api(this.logs_suggestions));
     app.get('/history_har/:port', this._api(this.history_har_get));
     app.get('/history_csv/:port', this._api(this.history_csv_get));
     app.get('/sessions/:port', this._api(this.sessions_get));
@@ -2561,7 +2551,7 @@ function*mgr_create_web_interface(_this){
         res.locals.path = req.path;
         next();
     });
-    app.get(/^\/((|tools|faq|setup_guide|howto|proxy_tester|stats|config|overview)|(zones|status_codes|domains|protocols|proxy)(\/[^\/]+)?)$/,
+    app.get(/^\/((|faq|howto|proxy_tester|logs|config|overview)|(status_codes|domains|protocols|proxy)(\/[^\/]+)?)$/,
         _this._api(
         (req, res, next)=>{
             setTimeout(()=>etask(function*mgr_cities_ensure_data(){
@@ -2942,43 +2932,14 @@ E.prototype.start = etask._fn(function*mgr_start(_this){
                 status_code, status_message, timestamp, elapsed, response_time,
                 node_latency, country, timeline, super_proxy, proxy_peer,
                 username, content_size, context, success, out_bw, in_bw,
-                response_body)
+                response_body, protocol, hostname)
                 VALUES ($port, $url, $method, $request_headers, $request_body,
                 $response_headers, $status_code, $status_message, $timestamp,
                 $elapsed, $response_time, $node_latency, $country, $timeline,
                 $super_proxy, $proxy_peer, $username, $content_size,
-                $context, $success, $out_bw, $in_bw, $response_body)`),
+                $context, $success, $out_bw, $in_bw, $response_body,
+                $protocol, $hostname)`),
         };
-        if (_this.argv.database_history)
-        {
-            _this.db.history = new sequelize(
-                _this.argv.database_history, {logging: false});
-            _this.db.history.define('request', {
-                port: sequelize.INTEGER,
-                url: sequelize.TEXT,
-                method: sequelize.TEXT,
-                request_headers: sequelize.TEXT,
-                request_body: sequelize.TEXT,
-                response_headers: sequelize.TEXT,
-                status_code: sequelize.INTEGER,
-                status_message: sequelize.TEXT,
-                timestamp: sequelize.INTEGER,
-                elapsed: sequelize.INTEGER,
-                response_time: sequelize.INTEGER,
-                node_latency: sequelize.INTEGER,
-                proxy_peer: sequelize.TEXT,
-                country: sequelize.TEXT,
-                timeline: sequelize.TEXT,
-                super_proxy: sequelize.TEXT,
-                username: sequelize.TEXT,
-                content_size: sequelize.INTEGER,
-                context: sequelize.TEXT,
-                success: sequelize.INTEGER,
-                out_bw: sequelize.INTEGER,
-                in_bw: sequelize.INTEGER,
-            });
-            yield _this.db.history.sync();
-        }
         yield _this.logged_update();
         yield _this.create_socks_servers();
         yield _this.init_proxies();
